z-index fix for modal

--- a/app/static_src/less/partials/nav.less
+++ b/app/static_src/less/partials/nav.less
@@ -1109,3 +1109,8 @@ span.deleteicon input {
     top: 0;
     position: fixed;
 }
+
+.modal {
+    z-index: 999999;
+    top: 26px;
+}
